--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,9 @@ dependencies = [
     "graphviz>=0.21",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
+    "scikit-learn>=1.7.2",
     "torch>=2.9.0",
 ]
+
+[tool.setuptools]
+package-dir = {"micrograd" = "src"}
